tests/NormalTests/paczka2/big_fuzzy/38763260.err
Error in line 5: B0T2Ac7J S699 57,9
Error in line 6: B0T2Ac7J A718 6,4
Error in line 11: 1kCp A937 82,5
Error in line 10: A718 S699 50,8
Error in line 20: 5PmfApy S699 45,8
Error in line 23: 5PmfApy A758 -2,7
Error in line 18: A718 A937 6,1
Error in line 28: A718 A758 13,7
Error in line 21: 5PmfApy A758 21,6
Error in line 41: B0T2AceJ Ae58 50,4
Error in line 38: 5PmfApy A937 21,2
Error in line 40: B0T2Ac7J S699 61,4
Error in line 25: 1kCp A937 91,1
Error in line 30: ukOYP A937 88,1
Error in line 45: B0T2Ac7J A758 203,6
Error in line 50: 1kCp A718 1,2
Error in line 58: 1kCp S699 7,3
Error in line 71: B0T2Ac7J A718 17,9
Error in line 85: A718 S699 39,8
Error in line 88: ukOYP A718 51,2
Error in line 99: ukOYP A758 49,8
Error in line 107: CGZy A937 43,2
Error in line 112: 5PmfApy A758 44,9
Error in line 115: CGZy S699 77,4
Error in line 122: OILlbCWCM S699 27,6
Error in line 117: 5PmfApy S699 18,4
Error in line 124: 5PmfApy A758 60,7
Error in line 130: 1kCp S699 57,0
Error in line 121: A718 A937 300,8
Error in line 137: A718 A758 69,2
Error in line 144: B0T2Ac7J A937 90,1
Error in line 154: B0T2Ac7J S699 1,8
Error in line 159: ukOYP A718 14,7
Error in line 160: OILlbCWCM A758 98,4
Error in line 164: 1kCp A937 34,0
Error in line 178: 1kCp A718 490,5
Error in line 182: 1kCp S699 0,2
Error in line 188: ukOYP A937 27,5
Error in line 192: B0T2Ac7J A937 27,4
Error in line 198: 5PmfApy A937 30,5
Error in line 203: 5PmfApy S699 66,4
Error in line 202: OILlbCWCM S699 26,9
Error in line 215: 5PmfApy A718 45,9
Error in line 201: A718 A718 40,5
Error in line 218: 5PmfApy A758 20,1
Error in line 223: CGZy S699 77,5
Error in line 219: 1kCp S699 122,0
Error in line 236: B0T2Ac7J A758 23,2
Error in line 234: ukOYP A937 60,3
